# dialog_text_to_summary

./: .gitignore  Dockerfile  README.md  pyproject.toml
env/vm_hosting_sh/: additional_installs.sh  batch_excute.sh  start_container.sh
run/: fetch_and_preprocess.py  finetune.py  get_data_from_yt.py
src/data_extractor/: analyze_youtube_ch.py  gaiyou_formatter.py  split_data.py  youtube_extractor.py
src/sandbox/: check_csv.py  finetune.py  get_video_data.py
