[project]
name = "dialog-text-to-summary"
version = "0.1.0"
description = "research repo for speech dialog text summarization"
authors = [
    {name = "ChokosenLoveti"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytube (>=15.0.0,<16.0.0)",
    "youtube-transcript-api (>=1.0.3,<2.0.0) ; python_version < \"3.14\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
