[project]
name = "dialog-text-to-summary"
version = "0.1.0"
description = "research repo for speech dialog text summarization"
authors = [
    {name = "ChokosenLoveti"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytube (>=15.0.0,<16.0.0)",
    "youtube-transcript-api (>=1.0.3,<2.0.0) ; python_version < \"3.14\"",
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "isodate (>=0.7.2,<0.8.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "peft (>=0.15.2,<0.16.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "bitsandbytes (>=0.45.5,<0.46.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
